tests/ui/const-generics/const-argument-non-static-lifetime.min.stderr
error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/const-argument-non-static-lifetime.rs:14:17
   |
LL |         let _: &'a ();
   |                 ^^
   |
   = note: see issue #76560 <https://github.com/rust-lang/rust/issues/76560> for more information
   = help: add `#![feature(generic_const_exprs)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
